--- a/simplemooc/core/templates/contact.html
+++ b/simplemooc/core/templates/contact.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="pure-g-r content-ribbon">
-    <div class="pure-u-1">
-        <h1>Fale conosco</h1>
-        <p>Você pode entrar em contato conosco tanto por e-mail como pelas redes sociais, abaixo seguem os links para contato:</p>
-        <h4>Links</h4>
+<div class="splash2">
+        <div class="pure-g-r">
+                    <div class="pure-u-1">
+                            <div class="l-box splash-text">
+                                        <div class="pure-u-1">
+</div> </div> </div> </div> </div>
+                                    <h2 class="splash-head2">Fale Conosco</h2>
+
+    <p>Você pode entrar em contato conosco por e-mail ou pelas nossas redes sociais:</p>
         <ul>
             <li>E-mail: <a href="mailto:contato@evolutionsft.org">contato@evolutionsft.org</a></li>
             <li>Twitter: <a href="https://twitter.com/evolution">@evolution</a></li>
+            <li>Facebook: <a href="https://facebook.com/evolutionsoftware">@evolutionsoftware</a></li>
         </ul>
     </div>
-</div>
+</div></p></p> 
 {% endblock %}
