--- a/simplemooc/core/templates/home.html
+++ b/simplemooc/core/templates/home.html
@@ -6,10 +6,10 @@
         <div class="pure-u-1">
             <div class="l-box splash-text">
                 <h1 class="splash-head">
-                    Uma Simples Plataforma de Ensino a Distância
+                    Plataforma de Ensino a Distância
                 </h1>
                 <h2 class="splash-subhead">
-                    O Evolution visa simplificar o ensino a distância, provendo ferramentas objetivas e de fácil uso para cursos a distância.
+                    O Evolution visa simplificar o ensino a distância, onde cursos serão disponibilizados com seus devidos materiais e vídeo-aulas, e haverá uma facilidade para a interação do aluno com o professor através dos nossos canais de comunicação. 
                 </h2>
                 <p>
                     <a href="/contato/" class="pure-button primary-button">Saiba mais</a>
@@ -38,16 +38,16 @@
 <div class="pure-g-r content-ribbon">
     <div class="pure-u-1-3">
         <div class="l-box">
-            <img src="http://placehold.it/400x250"
+            <img src="http://www.allanperon.com.br/wp-content/uploads/2016/03/ideias-conteudo-para-facebook.png"
                  alt="Fórum de Dúvidas">
         </div>
     </div>
     <div class="pure-u-2-3">
         <div class="l-box">
             <h4 class="content-subhead">Fórum de Dúvidas</h4>
-            <h3>Interaja com seus Alunos</h3>
+            <h3>Interaja com seus alunos</h3>
             <p>
-                No Evolution você pode ter seu próprio sistema de fórum para que seus alunos possam interagir com você e com os outros alunos
+                No Evolution você pode ter seu próprio fórum para que seus alunos possam interagir com você e com os outros alunos.
             </p>
         </div>
     </div>
@@ -58,13 +58,13 @@
             <h4 class="content-subhead">Exercícios</h4>
             <h3>Crie exercícios para avaliar seus alunos</h3>
             <p>
-                Você pode criar exercícios para que os alunos possam ser avaliados e todo o controle de notas e resolução dos exercícios é controlado pela plataforma, facilitando sua vida
+                Você pode criar exercícios para que os alunos possam ser avaliados e todo o controle de notas e resolução dos exercícios é controlado pela plataforma.
             </p>
         </div>
     </div>
     <div class="pure-u-1-3">
         <div class="l-box">
-            <img src="http://placehold.it/400x250"
+            <img src="http://s2.glbimg.com/L-os830GTKQMhKZ01xzdCE32SXo=/0x19:694x389/695x371/s.glbimg.com/po/tt2/f/original/2015/02/20/captura_de_tela_2014-10-28_as_143250.png"
                  alt="Exercícios">
         </div>
     </div>
@@ -72,7 +72,7 @@
 <div class="pure-g-r content-ribbon">
     <div class="pure-u-1-3">
         <div class="l-box">
-            <img src="http://placehold.it/400x250"
+            <img src="https://endomarketing.tv/wp-content/uploads/2016/01/endomarketing-progic-o-que-e-mural-digital-712x350.gif"
                  alt="Mural de Avisos">
         </div>
     </div>
