--- a/simplemooc/courses/templates/courses/index.html
+++ b/simplemooc/courses/templates/courses/index.html
@@ -3,11 +3,17 @@
 {% load static %}
 
 {% block content %}
+<div class="splash2">
+        <div class="pure-g-r">
+                    <div class="pure-u-1">
+                            <div class="l-box splash-text">
+                                        <div class="pure-u-1">
+</div> </div> </div> </div> </div>
 <div class="pure-g-r content-ribbon">
     <div class="pure-u-1">  
         <div class="l-box">            
             <h4 class="content-subhead">Listagem de Cursos do Evolution</h4>
-            <p>Abaixo a lista de cursos disponíveis na plataforma</p>
+            <p>Lista de cursos disponíveis na plataforma: </p>
         </div>
         <form method="POST">
         <div class="pure-controls">
