--- a/simplemooc/courses/templates/courses/create.html
+++ b/simplemooc/courses/templates/courses/create.html
@@ -11,8 +11,9 @@
                 <div class="l-box">
       {% csrf_token %}
       {{form}}
+      {% if user.is_staff %}
       <button type="submit" class="pure-button pure-button-primary">Criar Curso</button>
-
+      {% endif %}             
       </div>
 
     </div>
