--- a/simplemooc/courses/templates/courses/lessons.html
+++ b/simplemooc/courses/templates/courses/lessons.html
@@ -23,7 +23,9 @@
     </p>
 </div>
 {% empty %}
+{% if user.is_staff %} 
 <a href="{% url 'courses:create_aula' course.slug %} " class="pure-button pure-button-primary" >Criar </a>
+{% endif %} 
 <div class="well">
     <h2>
         Nenhuma aula disponível.
