--- a/simplemooc/accounts/templates/accounts/password_reset.html
+++ b/simplemooc/accounts/templates/accounts/password_reset.html
@@ -1,12 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="splash2">
+        <div class="pure-g-r">
+                    <div class="pure-u-1">
+                            <div class="l-box splash-text">
+                                        <div class="pure-u-1">
+</div> </div> </div> </div> </div>
 <div class="pure-g-r content-ribbon">
     <div class="pure-u-1">
         {% if success %}
         <p>Um e-mail foi enviando para você com mais detalhes de como criar uma nova senha</p>
         {% else %}
-        <h2>Informe seu E-mail</h2>
+        <h3> Esqueceu a senha? Que pena! Mas não se preocupe, informe seu e-mail que encaminharemos um link para você realizar a nova senha.</h3>
         <form class="pure-form pure-form-stacked" method="post">
             {% csrf_token %}
             <fieldset>
