--- a/simplemooc/accounts/templates/accounts/password_reset_confirm.html
+++ b/simplemooc/accounts/templates/accounts/password_reset_confirm.html
@@ -6,7 +6,7 @@
         {% if success %}
         <p>Sua senha foi criada com sucesso</p>
         {% else %}
-        <h2>Informe sua nova Senha</h2>
+        <h2>Esqueceu? Sem problemas! Informe sua nova senha.</h2>
         <form class="pure-form pure-form-stacked" method="post">
             {% csrf_token %}
             <fieldset>
