--- a/simplemooc/accounts/templates/accounts/login.html
+++ b/simplemooc/accounts/templates/accounts/login.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="pure-g-r content-ribbon">
-    <div class="pure-u-1">
-        <h2>Informe seus dados de cadastro</h2>
-        <form class="pure-form pure-form-stacked" method="post">
+<div class="splash2">
+        <div class="pure-g-r">
+                    <div class="pure-u-1">
+                            <div class="l-box splash-text">
+                                        <div class="pure-u-1">
+</div> </div> </div> </div> </div>
+ <h3>Acesse já a nossa plataforma!</h3>
+    <form class="pure-form pure-form-stacked" method="post"><div class="l-box2">
             {% csrf_token %}
             <fieldset>
                 {{ form.non_field_errors }}
@@ -27,5 +31,6 @@
             </p>
         </form>
     </div>
+</div>
 </div>
 {% endblock %}
