--- a/simplemooc/accounts/templates/accounts/login.html
+++ b/simplemooc/accounts/templates/accounts/login.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="splash2">
+    <div class="pure-g-r">
+                <div class="pure-u-1">
+                        <div class="l-box splash-text">
+                                    <div class="pure-u-1">
+</div> </div> </div> </div> </div>
 <div class="pure-g-r content-ribbon">
-    <div class="pure-u-1">
-        <h2>Informe seus dados de cadastro</h2>
+        <div class="pure-u-1"><h2>Acesse já a nossa plataforma!</h2>
         <form class="pure-form pure-form-stacked" method="post">
             {% csrf_token %}
             <fieldset>
@@ -15,7 +20,7 @@
                     {{ field }}
                     {{ field.errors }}
                 </div>
-                {% endfor %}
+                {% endfor %} 
 
                 <div class="pure-controls">
                     <button type="submit" class="pure-button pure-button-primary">Entrar</button>
