--- a/simplemooc/core/static/css/styles.css
+++ b/simplemooc/core/static/css/styles.css
@@ -71,7 +71,7 @@ a {
     color:  #14b9e2;
 }
 body .primary-button {
-    background: #a5530f;
+    background: #1461a8;
     color: #fff;
 }
 .splash {
@@ -122,6 +122,7 @@ body .primary-button {
     text-align: center;
     padding: 1em;
     font-size: 80%;
+    
 }
 ul.errorlist {
     margin: 0;
