--- a/simplemooc/core/templates/base.html
+++ b/simplemooc/core/templates/base.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Evolution Software - Uma simples plataforma de ensino a distância" />
-    <title>Evolution Software</title>
+    <title>EMEF Julio de Oliveira</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <link rel="shortcut icon" href="{% static 'favicon/favicon.png' %}"/>
+    <link rel="shortcut icon" href="{% static 'favicon/favicon.jpg' %}"/>
 </head>
 <body >
 <div class="header">
     <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
-        <a class="pure-menu-heading" href = "/" >Evolution Software</a>
+        <a class="pure-menu-heading" href = "/" >EMEF Júlio de Oliveira</a>
         <ul>
             <li class="pure-menu-selected"><a href="/">Início</a></li>
             <li><a href="{% url 'courses:index' %}">Cursos</a></li>
