Ajustando Imagem de Fundo

--- a/simplemooc/courses/templates/courses/details.html
+++ b/simplemooc/courses/templates/courses/details.html
@@ -3,14 +3,14 @@
 {% load static %}
 
 {% block content %}
-<div class="splash">
+<div class="splash4">
     <div class="pure-g-r">
         <div class="pure-u-1">
             <div class="l-box splash-text">
-                <h1 class="splash-head">
+                <h1 class="splash-head2">
                     {{ course }}
                 </h1>
-                <h2 class="splash-subhead">
+                <h2 class="splash-subhead2">
                     {{ course.description }}
                 </h2>
                 <p>
