--- a/simplemooc/accounts/templates/accounts/login.html
+++ b/simplemooc/accounts/templates/accounts/login.html
@@ -6,9 +6,9 @@
                 <div class="pure-u-1">
                         <div class="l-box splash-text">
                                     <div class="pure-u-1">
-</div> </div> </div> </div> </div>
-<div class="pure-g-r content-ribbon">
-        <div class="pure-u-1"><h2>Acesse já a nossa plataforma!</h2>
+</div> </div> </div> </div> </div> <div class="div1">
+    <div align="center">
+        <div class="pure-u-1"><h3>Login</h3></div></div>
         <form class="pure-form pure-form-stacked" method="post">
             {% csrf_token %}
             <fieldset>
@@ -32,5 +32,5 @@
             </p>
         </form>
     </div>
-</div>
+</div></div>
 {% endblock %}
