--- a/simplemooc/accounts/templates/accounts/register.html
+++ b/simplemooc/accounts/templates/accounts/register.html
@@ -5,12 +5,13 @@
         <div class="pure-g-r">
                     <div class="pure-u-1">
                             <div class="l-box splash-text">
-                                        <div class="pure-u-1">
-</div> </div> </div> </div> </div>
-    <div class="pure-u-1">
-        <h3>Eba! Você se interessou na nossa plataforma! Ficamos felizes em te ajudar nesse processo.</h3>
-             <p><h4>Para obter o acesso, será necessário que você nos informe os seguintes dados:</h4>
-                <div class="l-box2">
+
+</div> </div> </div> </div> 
+    <div class="pure-u-1"><div class="div2">
+
+             <p><h3>Inscreva-se já:</h3>
+
+                <div class="l-box2"> </div> 
                             <form class="pure-form pure-form-stacked" method="post">
             {% csrf_token %}
             <fieldset>
@@ -23,13 +24,11 @@
                     {{ field.errors }}
                 </div>
                 {% endfor %}
-
                 <div class="pure-controls">
                     <button type="submit" class="pure-button pure-button-primary">Cadastrar</button>
                 </div>
             </fieldset>
-        </form>
-    </div>
+        </form></div>
 </div>
 </div>
 {% endblock %}
