--- a/simplemooc/core/templates/contact.html
+++ b/simplemooc/core/templates/contact.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
 <div class="splash2">
         <div class="pure-g-r">
@@ -11,10 +13,18 @@
 
     <p>Você pode entrar em contato conosco por e-mail ou pelas nossas redes sociais:</p>
         <ul>
-            <li>E-mail: <a href="mailto:contato@evolutionsft.org">contato@evolutionsft.org</a></li>
+            <li>E-mail: <a href="mailto:juliooliveiranoar@gmail.com">juliooliveiranoar@gmail.com</a></li>
+            <li>Facebook: <a href="https://www.facebook.com/pg/escola.juliooliveira">@juliodeoliveira</a></li>
             <li>Twitter: <a href="https://twitter.com/evolution">@evolution</a></li>
             <li>Facebook: <a href="https://facebook.com/evolutionsoftware">@evolutionsoftware</a></li>
-        </ul>
+
+        </div>
     </div>
+</div>
+
+    </div>
+</div>
+</ul>
+</div>
 </div></p></p> 
 {% endblock %}
