--- a/simplemooc/core/templates/home.html
+++ b/simplemooc/core/templates/home.html
@@ -5,14 +5,14 @@
     <div class="pure-g-r">
         <div class="pure-u-1">
             <div class="l-box splash-text">
-                <h1 class="splash-head">
-                    Plataforma de Ensino a Distância
-                </h1>
-                <h2 class="splash-subhead">
-                    O Evolution visa simplificar o ensino a distância, onde cursos serão disponibilizados com seus devidos materiais e vídeo-aulas, e haverá uma facilidade para a interação do aluno com o professor através dos nossos canais de comunicação. 
-                </h2>
+                  <h1 class="splash-head">
+                      Plataforma de Ensino a Distância
+                  </h1>
+                  <h2 class="splash-subhead">             
+
+
+                  </h2>
                 <p>
-                    <a href="/contato/" class="pure-button primary-button">Saiba mais</a>
                 </p>
             </div>
         </div>
@@ -22,7 +22,7 @@
     <div class="pure-u-2-3">
         <div class="l-box">
             <h4 class="content-subhead">Vídeo-aulas e materiais digitais</h4>
-            <h3>Publique suas aulas</h3>
+            <h3>Publicação das aulas</h3>
             <p>
                 O Evolution tem um sistema simples e prático para que o professor disponibilize vídeo-aulas e materiais digitais como: pdf's, slides, imagens ...
             </p>
@@ -45,9 +45,9 @@
     <div class="pure-u-2-3">
         <div class="l-box">
             <h4 class="content-subhead">Fórum de Dúvidas</h4>
-            <h3>Interaja com seus alunos</h3>
+            <h3>Interação com os alunos</h3>
             <p>
-                No Evolution você pode ter seu próprio fórum para que seus alunos possam interagir com você e com os outros alunos.
+                No Evolution terá um fórum onde alunos possam interagir com o professor e com os outros alunos.
             </p>
         </div>
     </div>
@@ -56,9 +56,9 @@
     <div class="pure-u-2-3">
         <div class="l-box">
             <h4 class="content-subhead">Exercícios</h4>
-            <h3>Crie exercícios para avaliar seus alunos</h3>
+            <h3>Exercícios para avaliação dos alunos</h3>
             <p>
-                Você pode criar exercícios para que os alunos possam ser avaliados e todo o controle de notas e resolução dos exercícios é controlado pela plataforma.
+                Será possível a criação de exercícios para que os alunos possam ser avaliados e todo o controle de notas e resolução dos exercícios é controlado pela plataforma.
             </p>
         </div>
     </div>
