--- a/simplemooc/courses/templates/courses/index.html
+++ b/simplemooc/courses/templates/courses/index.html
@@ -12,7 +12,7 @@
 <div class="pure-g-r content-ribbon">
     <div class="pure-u-1">  
         <div class="l-box">            
-            <h4 class="content-subhead">Listagem de Cursos do Evolution</h4>
+            <h4 class="content-subhead">Listagem de Cursos</h4>
             <p>Lista de cursos disponíveis na plataforma: </p>
         </div>
         <form method="POST">
