--- a/simplemooc/courses/templates/courses/material.html
+++ b/simplemooc/courses/templates/courses/material.html
@@ -15,7 +15,7 @@
 {% block dashboard_content %}
 <div class="well">
         <video width="530" height="440" controls autoplay>
-            <source src="{% static 'videos/Insightfy_-_Homepage.mp4' %}" type="video/mp4"> </source>
+            <source src="{% static video %}" type="video/mp4"> </source>
         </video>
     {{ material.embedded|safe }}
     <p>
